<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HeartWare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Day">Today is November 21st, 2014</string>
    <string name="Data">Suggestion: Eating healthier foods and exercising more can help you lose weight!</string>
    <string name="add_profile">Add Profile</string>
    <string name="profiles_title">Profiles</string>
    <string name="goals_title">Goals</string>
    <string name="plans_title">Plans</string>
    <string name="add_button">ADD</string>
    <string name="save_data">Save</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="smart_query">Query DLVHEX</string> <!--  for analyzing data from Jawbone UP -->
    <string name="data_view">Graphs</string> <!--  For viewing the graph of data using AFreeChart -->
    <string name="title_activity_main">MainActivity</string>
    <string name="graph_description">A graph</string>
    <string name="query_string">DLVHex Query Result:\nSuggestion: If you eat healthier and and exercise more you can lose weight!</string>
    
    <!-- user data -->
	<string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="home_address">Address</string>
	
</resources>
